# agentic-rag

./: .env.example  .gitignore  .replit  README.md  components.json  design_guidelines.md  drizzle.config.ts  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.md  tailwind.config.ts  vite.config.ts
attached_assets/: Pasted-Project-Prompt-Local-Multi-Agent-RAG-Orchestrator-Project-Overview-Build-a-production-ready-open-1761721412860_1761721412861.txt  Pasted-Project-Prompt-Local-Multi-Agent-RAG-Orchestrator-Project-Overview-Build-a-production-ready-open-1761721599446_1761721599447.txt  System Instruction_1761721411514.txt
client/: index.html
client/src/: App.tsx  index.css
database/: indexes-postgresql.sql  indexes.sql  optimize-postgresql.sql
migrations/postgresql/: 0000_clean_valkyrie.sql  0001_add_composite_session_index.sql  0002_add_performance_indexes.sql  0003_add_message_feedback.sql  0004_add_user_quota_fields.sql  0006_hybrid_user_system.sql  (+3 more)
server/: apply_migrations.py  apply_quota_migration.py  auth_middleware.py  azure_client.py  check_storage.py  config_encryption.py  config_manager.py  database_interface.py  database_postgresql.py  database_sqlite.py  datetime_utils.py  db_connection.py  document_processor.py  error_utils.py  hybrid_middleware.py  index.ts  logging_config.py  main.py  ocr_processor.py  performance_tracker.py  providers.py  quota_middleware.py  rag_chain.py  requirements.txt  routes.ts  start-backend.sh  storage.py  storage.ts  universal_document_processor.py  vite.ts
shared/: schema.ts
(+104 files in other folders)
